Bring JSON::Create::PP into line with JSON::Create XS version
Poke into internals to get NV status, boolean status using B.

Messing around with floating point formats, note on bad benchmark.

Commented out unused tests in fformat.t.

Added Unicode replacement in PP.pm.

Fixed bug in surrogate pair handing in PP.pm.

Boolean compatibility between JSON::Parse and JSON::Create::PP.

Add handlers for PP version.

Tests now passing 100% for PP version.

--- a/lib/JSON/Create.pod.tmpl
+++ b/lib/JSON/Create.pod.tmpl
@@ -670,6 +670,13 @@ to vary wildly from one test to another. The benchmarking script also
 contains commented out code to test against L<JSON::DWIW> if you are
 interested.
 
+Please note that the numbers for the floating point results are at the
+moment unfairly skewed in favour of JSON::Create, because whereas
+JSON::XS prints out the full available precision of the number (which
+is about equivalent to printing with a format C<%.15g>), JSON::Create
+prints only six digits of precision, creating a false impression of
+greater speed. Work on this is currently in progress.
+
 If you think these benchmarks are unfair, these are the best I've
 got. Please feel free to make better ones and add them.
 
